tests/integration/snapshots/integration__snapshot__unpinned_uses.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"unpinned-uses.yml\")).args([\"--pedantic\"]).run()?"
---
warning[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:11:9
   |
11 |       - uses: actions/checkout
   |         ---------------------- action is not pinned to a tag, branch, or hash ref
   |
   = note: audit confidence → High

help[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:16:9
   |
16 |       - uses: actions/checkout@v3
   |         ------------------------- help: action is not pinned to a hash ref
   |
   = note: audit confidence → High

warning[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:21:9
   |
21 |       - uses: github/codeql-action/upload-sarif
   |         --------------------------------------- action is not pinned to a tag, branch, or hash ref
   |
   = note: audit confidence → High

warning[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:24:9
   |
24 |       - uses: docker://ubuntu
   |         --------------------- action is not pinned to a tag, branch, or hash ref
   |
   = note: audit confidence → High

warning[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:30:9
   |
30 |       - uses: docker://ghcr.io/pypa/gh-action-pypi-publish
   |         -------------------------------------------------- action is not pinned to a tag, branch, or hash ref
   |
   = note: audit confidence → High

5 findings: 0 unknown, 0 informational, 1 low, 4 medium, 0 high
