tests/integration/snapshots/integration__snapshot__unredacted_secrets.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"unredacted-secrets.yml\")).run()?"
snapshot_kind: text
---
warning[unredacted-secrets]: leaked secret values
  --> @@INPUT@@:14:18
   |
14 |           stuff: ${{ fromJSON(secrets.password) }}
   |                  --------------------------------- bypasses secret redaction
   |
   = note: audit confidence → High

warning[unredacted-secrets]: leaked secret values
  --> @@INPUT@@:17:23
   |
17 |           otherstuff: ${{ fromJson(secrets.otherstuff).field }}
   |                       ----------------------------------------- bypasses secret redaction
   |
   = note: audit confidence → High

2 findings: 0 unknown, 0 informational, 0 low, 2 medium, 0 high
